Updated bio (minor); Updated papers acccepted to COLT2023; Increased margin for heading in Publications section; Fixed issue with scrollOverflow (previously, could not select text for sections with internal scrolling);

--- a/homepage.css
+++ b/homepage.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1:not(.my-name) {
-    margin-top: 0.5vh;
+    margin-top: 5vh;
     margin-bottom: 2vh;
     color: #f0f0f0;
     font-weight: bold;
